--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
+    "@types/ms": "^2.1.0",
     "@types/node": "^22.13.1",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.7",
@@ -37,6 +38,7 @@
     "express": "4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "ms": "^2.1.3",
     "nodemailer": "^6.10.0",
     "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
