--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/ms": "^2.1.0",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/yamljs": "^0.2.34",
     "pkgroll": "^2.8.2",
     "prisma": "^6.3.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
