--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/ms": "^2.1.0",
     "@types/node": "^22.13.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/yamljs": "^0.2.34",
     "pkgroll": "^2.8.2",
