--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/ms": "^2.1.0",
     "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/yamljs": "^0.2.34",
@@ -42,6 +43,7 @@
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "nodemailer": "^6.10.0",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
