--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,30 @@
+# API KEYS GEMINI
+API_KEY_GEMINI=""
+
+# EMAIL ADMIN
+EMAIL_ADMIN=""
+
+# DATABASE URL LOCAL
 DATABASE_URL=""
-PORT="" 
+
+# DATABASE URL PROD
+DATABASE_URL_PROD=""
+DIRECT_URL_PROD=""
+
+# PORT
+PORT=""
+
+# APP URL
 APP_URL=""
+
+# SOCKET URL
+SOCKET_URL=""
+
+# JWT
 JWT_SECRET=""
+
+# EMAIL 
 EMAIL_USER=""
 EMAIL_PASSWORD=""
 SMTP_HOST=""
 SMTP_PORT=""
-API_KEY_GEMINI=""
