--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,12 @@
 version: "3.8"
 services:
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+
   db:
-    image: postgres:16
+    image: postgres
     container_name: my_postgres
     restart: always
     environment:
