--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "pkgroll": "^2.8.2",
     "prisma": "^6.3.1",
     "ts-node": "^10.9.2",
@@ -37,11 +38,13 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "nodemailer": "^6.10.0",
+    "redis": "^4.7.0",
     "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
