fix(package): :bug: Add postinstall script for rollup dependency and update package.json to include latest rollup version

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node dist/index.mjs",
     "dev": "tsx watch src/index.ts",
-    "build": "pkgroll"
+    "build": "pkgroll",
+    "postinstall": "node -e \"try { require('@rollup/rollup-linux-x64-gnu'); } catch (e) { process.exit(0); }\" || npm i @rollup/rollup-linux-x64-gnu"
   },
   "keywords": [],
   "author": "",
@@ -51,6 +52,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@rollup/rollup-linux-x64-gnu": "latest"
   }
 }
