--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@types/ejs": "^3.1.5",
+    "@types/multer": "^1.4.12",
     "pkgroll": "^2.8.2",
     "prisma": "^6.3.1",
     "ts-node": "^10.9.2",
@@ -22,6 +23,8 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.802.0",
+    "@aws-sdk/s3-request-presigner": "^3.802.0",
     "@prisma/client": "^6.3.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
@@ -44,12 +47,14 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
-    "socket.io": "^4.8.1",
     "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "yamljs": "^0.3.0",
     "zod": "^3.24.1"
   },
