--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "exports": "./dist/index.mjs",
   "scripts": {
     "start": "node dist/index.mjs",
-    "dev": "tsx watch src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "build": "pkgroll"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,7 @@
   "devDependencies": {
     "@types/ejs": "^3.1.5",
     "@types/multer": "^1.4.12",
+    "cross-env": "^7.0.3",
     "pkgroll": "^2.8.2",
     "prisma": "^6.8.2",
     "ts-node": "^10.9.2",
