--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,31 @@
-DB_PASSWORD=password
-DB_NAME=db_name
-DB_HOST=localhost
-DB_PORT=
-DB_USERNAME=username
+# Environment
+ENVIRONMENT=development
+NODE_ENV=development
+TIMEZONE=America/Lima
 
-
+# Server
 PORT=3000
-HOST_API=http://localhost:3000/api
+APP_URL=http://localhost:3000
+SOCKET_URL=http://localhost:3000
+
+# Database
+DATABASE_URL="postgresql://miusuario:mipassword@localhost:5432/mi-proyecto?schema=public"
+DIRECT_URL="postgresql://miusuario:mipassword@localhost:5432/mi-proyecto?schema=public"
+
+# Redis
+REDIS_URL="redis://localhost:6379"
+
+# JWT
+JWT_SECRET="tu-jwt-secret-super-seguro"
+
+# AWS (opcional)
+AWS_BUCKET_NAME=""
+AWS_BUCKET_REGION=""
+AWS_KEY_ACCESS=""
+AWS_KEY_ACCESS_SECRET=""
+
+# Email (opcional)
+EMAIL_USER=""
+EMAIL_PASSWORD=""
+SMTP_HOST=""
+SMTP_PORT=""
