--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,38 @@
-# compiled output
-/dist
-/node_modules
-/build
-/postgres
-
-# Logs
-logs
-*.log
+# Node.js
+node_modules/
 npm-debug.log*
-pnpm-debug.log*
-yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-
-# OS
+pnpm-debug.log*
+*.log
 .DS_Store
 
-# Tests
-/coverage
-/.nyc_output
+# Entornos y credenciales
+.env
+.cursorrules
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
+# Prisma
+prisma/dev.db
+prisma/dev.db-journal
+prisma/migrations/
+
+# PostgreSQL
+pgdata/
+*.sql
+*.dump
+
+# TypeScript
+*.tsbuildinfo
+*.d.ts
+dist/
+
+# Cache del editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*.sublime-project
 *.sublime-workspace
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# temp directory
-.temp
-.tmp
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+# WhatsApp Web.js
+.wp-auth/
+.wwebjs_cache/
