--- a/.env.sample
+++ b/.env.sample
@@ -4,9 +4,9 @@ NODE_ENV=development
 TIMEZONE=America/Lima
 
 # Server
-PORT=3000
-APP_URL=http://localhost:3000
-SOCKET_URL=http://localhost:3000
+PORT=3001
+APP_URL=http://localhost:3001
+SOCKET_URL=http://localhost:3001
 
 # Database
 DATABASE_URL="postgresql://miusuario:mipassword@localhost:5432/mi-proyecto?schema=public"
@@ -25,7 +25,7 @@ AWS_KEY_ACCESS=""
 AWS_KEY_ACCESS_SECRET=""
 
 # Email (opcional)
-EMAIL_USER=""
+EMAIL_ADMIN=""
 EMAIL_PASSWORD=""
 SMTP_HOST=""
 SMTP_PORT=""
