--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,39 @@
+version: "3.8"
+
 services:
-  app:
-    build: .
-    env_file:
-      - .env
-    depends_on:
-      - db
-      - redis
-
-  redis:
-    image: redis:7
-    ports:
-      - "6379:6379"
-
   db:
     image: postgres:16
-    container_name: labase-service-db
+    container_name: arxatec-postgres
     restart: always
-    environment:
-      POSTGRES_DB: labase-service
-      POSTGRES_USER: labase
-      POSTGRES_PASSWORD: labase
     ports:
-      - "5432:5432"
+      - "5433:5433"
+    environment:
+      POSTGRES_DB: arxatec-service
+      POSTGRES_USER: arxatec
+      POSTGRES_PASSWORD: arxatec
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pg_data_arxatec:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U arxatec -d arxatec-service"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+
+  redis:
+    image: redis:7-alpine
+    container_name: arxatec-redis
+    command: ["redis-server", "--requirepass", "arxatec", "--appendonly", "yes"]
+    restart: always
+    ports:
+      - "6380:6380" # No choca con 6379 de labase
+    volumes:
+      - redis_data_arxatec:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "arxatec", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
 volumes:
-  postgres_data:
+  pg_data_arxatec:
+  redis_data_arxatec:
