--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "@aws-sdk/s3-request-presigner": "^3.884.0",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.15.0",
-    "@types/date-fns": "^2.5.3",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.18",
-    "dotenv": "^17.2.2",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-basic-auth": "^1.2.1",
@@ -39,6 +38,9 @@
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.6",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "redis": "^5.8.2",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
@@ -54,10 +56,10 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/nanoid": "^2.1.0",
     "@types/node": "^24.3.1",
     "@types/nodemailer": "^7.0.1",
-    "@types/socket.io": "^3.0.1",
+    "@types/passport-facebook": "^3.0.3",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "pkgroll": "^2.15.4",
