feat: :sparkles: config env and swagger

--- a/.env.sample
+++ b/.env.sample
@@ -9,14 +9,14 @@ APP_URL=http://localhost:3001
 SOCKET_URL=http://localhost:3001
 
 # Database
-DATABASE_URL="postgresql://miusuario:mipassword@localhost:5432/mi-proyecto?schema=public"
-DIRECT_URL="postgresql://miusuario:mipassword@localhost:5432/mi-proyecto?schema=public"
+DATABASE_URL="postgresql://arxatec_user:arxatec_password@localhost:5432/arxatec_db"
+DIRECT_URL="postgresql://arxatec_user:arxatec_password@localhost:5432/arxatec_db"
 
 # Redis
 REDIS_URL="redis://localhost:6379"
 
 # JWT
-JWT_SECRET="tu-jwt-secret-super-seguro"
+JWT_SECRET=
 
 # AWS (opcional)
 AWS_BUCKET_NAME=""
@@ -29,3 +29,15 @@ EMAIL_ADMIN=""
 EMAIL_PASSWORD=""
 SMTP_HOST=""
 SMTP_PORT=""
+
+# Google
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+# Facebook
+FACEBOOK_CLIENT_ID=""
+FACEBOOK_CLIENT_SECRET=""
+
+# Swagger
+SWAGGER_USER=
+SWAGGER_PASS=
