--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,29 @@
-x
+version: "3.8"
+
+services:
+  postgres:
+    image: postgres:15
+    container_name: arxatec_postgres
+    environment:
+      POSTGRES_DB: arxatec_db
+      POSTGRES_USER: arxatec_user
+      POSTGRES_PASSWORD: arxatec_password
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+  redis:
+    image: redis:7-alpine
+    container_name: arxatec_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    command: redis-server --appendonly yes
+
+volumes:
+  postgres_data:
+  redis_data:
